fix menu and nav on mobile

--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -63,10 +63,10 @@
     .verticalHeadline {
         position: fixed;
         top: 12rem;
-        left: 18rem;
+        left: 12rem;
         display: block;
         font-weight: 200;
-        font-size: 16rem;
+        font-size: 12rem;
         width: 100%;
         transform: rotate(90deg);
         transform-origin: top left;
@@ -74,7 +74,7 @@
     }
 
     .content {
-        bottom: 2rem;
+        bottom: 14rem;
     }
 
     .details {
