--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -1,5 +1,5 @@
 .menu {
-    min-height: 100vh !important;
+    min-height: 86.5vh !important;
     flex-direction: column;
 }
 
