--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -30,6 +30,9 @@
 
 @media screen and (max-width: 812px) {
     .container {
+        position: fixed;
+        top: 0;
+        width: 100%;
         padding: 3rem;
     }
 
